# ai-OS

./: .gitignore  Cargo.toml  FEATURES.md  PROJECT_SUMMARY.md  README.md
crates/aios-ai/: Cargo.toml
crates/aios-ai/src/: cache.rs  config.rs  context.rs  gateway.rs  lib.rs
crates/aios-ai/src/provider/: claude.rs  mod.rs  openai.rs
crates/aios-cli/: Cargo.toml
crates/aios-cli/src/: commands.rs  lib.rs
crates/aios-core/: Cargo.toml
crates/aios-core/src/: config.rs  error.rs  lib.rs  main.rs
crates/aios-fs/: Cargo.toml
crates/aios-fs/src/: ai_path.rs  lib.rs  operations.rs
crates/aios-kernel/: Cargo.toml
crates/aios-kernel/src/: lib.rs  procfs.rs  syscall.rs
crates/aios-memory/: Cargo.toml
crates/aios-memory/src/: conversation.rs  embeddings.rs  lib.rs
crates/aios-multimodal/: Cargo.toml
crates/aios-multimodal/src/: code.rs  image.rs  lib.rs  normalizer.rs  text.rs
crates/aios-network/: Cargo.toml
crates/aios-network/src/: client.rs  lib.rs  tools.rs
crates/aios-policy/: Cargo.toml
crates/aios-policy/src/: audit.rs  lib.rs  permissions.rs
crates/aios-process/: Cargo.toml
crates/aios-process/src/: lib.rs  monitor.rs  spawn.rs
crates/aios-voice/: Cargo.toml
crates/aios-voice/src/: lib.rs  tts.rs
os/: Cargo.toml  Makefile  README.md  build.rs  checklist.md  spec.md  tasks.md  test.sh
os/.cargo/: config.toml
os/iso/boot/: ai-os-kernel
os/iso/boot/grub/: grub.cfg
os/src/: ai_core.rs  ai_service.rs  capability.rs  context_switch.rs  gdt.rs  heap.rs  idt.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  paging.rs  pic.rs  pit.rs  process.rs  scheduler.rs  serial.rs  vector_db.rs
os/src/arch/x86_64/: boot.S  linker.ld
os/src/vga/: mod.rs
