[package]
name = "ai-os-kernel"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
gcc = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[target.'cfg(target_os = "none")'.dependencies]
gcc = { version = "0.3", optional = true }
