[package]
name = "aios-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rustyline.workspace = true
chrono.workspace = true
uuid.workspace = true

# Internal crates
aios-ai = { path = "../aios-ai" }
aios-memory = { path = "../aios-memory" }
