[package]
name = "aios-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aios"
path = "src/main.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
toml.workspace = true

# Internal crates
aios-ai = { path = "../aios-ai" }
aios-cli = { path = "../aios-cli" }
aios-memory = { path = "../aios-memory" }
