[package]
name = "aios-multimodal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
mime_guess.workspace = true
